# Monolilith

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.zig
.github/workflows/: build-linux.yml  build-windows.yml  cargo-clippy.yml
src/: config.rs  help.rs  main.rs  meta.rs
src/compile/: cargo.rs  clang.rs  gcc.rs  go.rs  mod.rs  zig.rs
src/tasks/: add.rs  build.rs  init.rs  mod.rs  remove.rs
