[package]
name = "monolilith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kagero = { version = "0.1.0", default-features = false, features = ["printer"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"