[package]
name = "monolilith"
description = "Simple Build System for Monorepos"
version = "1.1.0"
edition = "2021"
license = "EUPL-1.2"
readme = "README.md"
repository = "https://github.com/Zeneyra-Linux/Monolilith"
homepage = "https://github.com/Zeneyra-Linux/Monolilith"
documentation = "https://github.com/Zeneyra-Linux/Monolilith/wiki"
exclude = ["/.vscode/", "/.github/", "/target/"]
categories = ["command-line-utilities", "accessibility", "compilers"]
keywords = ["monorepo", "build-system", "build", "zeneyra-linux", "cross-platform"]
authors = ["Stridsvagn69420 (https://github.com/Stridsvagn69420)"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kagero = { version = "0.3.0", default-features = false, features = ["printer", "runner"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[build-dependencies]
chrono = "0.4.22"

[profile.release]
lto = true
strip = true
debug = true
